# MonorepoCDNdados

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/context/: SOBRE-ESTE-PROJETO.md  arquitetura.md  decisoes.md  glossario.md  projeto.md
.claude/guides/: README.md  common.md  config.md  data.md  entrypoints.md  models.md  platform.md
.claude/rules/: 01-mlflow-centralizado.md  04-raiz-minima.md  06-plataforma-opcional.md  README.md
.claude/skills/: README.md  adicionar-novo-modelo.md  iniciar-projeto-novo-a-partir-do-esqueleto.md
.github/workflows/: ci.yml
ai/context/: arquitetura.md  decisoes.md  glossario.md  projeto.md
ai/guides/: data.md
ai/rules/: 00-anatomia-de-5-arquivos.md  02-fonte-unica-de-dependencias.md  03-manifesto-sempre-em-sync.md  04-raiz-minima.md  05-disciplina-de-nomes.md
common/: __init__.py  config.py  data_source.py  splits.py  tracking.py
config/: exemplo_modelo.yaml
data/: __init__.py
data/sources/: __init__.py  parquet_source.py  spark_table_source.py  sql_source.py
docs/: GUIA-DO-ANALISTA.md
docs/adr/: 0000-distribuicao-por-copia.md  0001-toggle-databricks.md  0002-fonte-unica-de-dependencias.md  0003-interface-de-dados-neutra.md  (+4 more)
docs/guides/: common.md  (+1 more)
entrypoints/: run_local.py  run_serverless.py
platform/: MLProject  conda.yaml  databricks.yml
tests/: conftest.py  test_core.py  test_exemplo_modelo.py  test_gen_conda.py  test_init.py  test_invariante_plataforma.py  test_smoke.py
tools/: check.py  check_manifest.py  check_mlflow.py  check_platform.py  check_root.py  gen_conda.py  init.py
(+15 files in other folders)
