[project]
name = "esqueleto-ciencia-de-dados"
version = "0.1.0"
description = "Esqueleto canônico para projetos de Ciência de Dados do núcleo de dados da PoliJúnior"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=16",
    "scikit-learn>=1.5",
    "mlflow>=2.14",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

# Extras opcionais: o núcleo instala sem eles. Ligados conforme o toggle/ambiente.
[project.optional-dependencies]
databricks = [
    "databricks-sdk>=0.29",
    "databricks-connect>=15.1",
]
spark = [
    "pyspark>=3.5",
]

[dependency-groups]
dev = [
    "ruff>=0.5",
    "pytest>=8.2",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# O núcleo do esqueleto vive em pacotes de primeiro nível (config, data, models,
# common, entrypoints). Ainda não há código; declaramos os pacotes conforme surgem.
packages = ["common"]

[tool.uv]
# Extras de plataforma nunca entram por padrão: o núcleo instala sozinho (Rule 06).
default-groups = ["dev"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["platform"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=common --cov-report=term-missing"
pythonpath = ["."]
